# sonolus-next-sekai-arc-engine

./: .python-version  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: build.yml
resources/: LICENSE.txt  pjsekai.scp  pysekai_skin.scp
sekai/: level.py  project.py
sekai/lib/: archetype_names.py  buckets.py  connector.py  converter.py  ease.py  effect.py  layer.py  layout.py  note.py  options.py  particle.py  sim_line.py  skin.py  slot_effect.py  stage.py  streams.py  timescale.py  ui.py
sekai/play/: bpm_change.py  connector.py  initialization.py  input.py  input_manager.py  mode.py  note.py  sim_line.py  slot_effect.py  stage.py  timescale.py
sekai/preview/: bpm_change.py  connector.py  initialization.py  layout.py  mode.py  note.py  sim_line.py  stage.py  timescale.py
sekai/tutorial/: framework.py  instructions.py  mode.py  navigate.py  painting.py  phases.py  preprocess.py  update.py
sekai/watch/: bpm_change.py  connector.py  initialization.py  mode.py  note.py  sim_line.py  slot_effect.py  stage.py  timescale.py
