[project]
name = "next-sekai"
version = "0.1.0"
description = "Next SEKAI Sonolus engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sonolus-py~=0.10.8",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "D", "UP", "YTT", "B", "A", "COM", "C4", "DTZ", "PIE", "PT", "Q", "SLOT", "SIM", "PTH", "PL", "PERF", "FURB", "LOG", "RUF"]
ignore = ["E402", "E741", "D1", "COM812", "PLW2901", "PLW3201", "PLR6301", "PLC0415", "PLR2004", "PLR09", "SIM108", "FURB113", "A005", "B903", "FURB118", "E501", "PLR1714"]

[tool.ruff.lint.pydocstyle]
convention = "google"
